[gd_scene load_steps=20 format=3 uid="uid://f081neg4h7dv"]

[ext_resource type="Script" uid="uid://bang6a1r87sqa" path="res://scripts/ai_help.gd" id="1_tb6sx"]
[ext_resource type="Material" uid="uid://crjr13k12egng" path="res://scenes/splash.tres" id="2_o277e"]
[ext_resource type="Texture2D" uid="uid://kdt71jk5swyh" path="res://game_assets/icons/user.png" id="3_h3ok5"]
[ext_resource type="Script" uid="uid://crg17igxmewdi" path="res://scripts/ai_text.gd" id="4_3k8xb"]
[ext_resource type="Theme" uid="uid://cx365ld2mgjne" path="res://resources/theme_base.tres" id="4_42jti"]
[ext_resource type="Theme" uid="uid://74kwx22ikciq" path="res://resources/theme_headers.tres" id="5_3k8xb"]
[ext_resource type="FontFile" uid="uid://d0xcffxoyd14k" path="res://game_assets/fonts/JetBrainsMono-VariableFont_wght.ttf" id="6_uxxa7"]
[ext_resource type="Script" uid="uid://c4ll2x2c2kw8j" path="res://scripts/text.gd" id="7_o277e"]
[ext_resource type="PackedScene" uid="uid://wd63efdi6bdn" path="res://scenes/BaseBComponent.tscn" id="8_q5qxb"]
[ext_resource type="Script" uid="uid://dx40hpbce8w60" path="res://scripts/button_config.gd" id="9_32ht4"]
[ext_resource type="Script" uid="uid://cink4uduoxu4b" path="res://scripts/end.gd" id="10_hh2om"]
[ext_resource type="Texture2D" uid="uid://cwe4nkiqegj6f" path="res://game_assets/icons/mic.png" id="11_h3ok5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42jti"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6776001, 0.21559997, 0.77, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Gradient" id="Gradient_o277e"]
colors = PackedColorArray(0.14901961, 0.14901961, 0.14901961, 1, 0.15, 0.15, 0.15, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h3ok5"]
gradient = SubResource("Gradient_o277e")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tb6sx"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 40.0
content_margin_bottom = 10.0
bg_color = Color(0.21176471, 0.21176471, 0.21176471, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o277e"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 40.0
content_margin_bottom = 10.0
bg_color = Color(0.23137255, 0.23137255, 0.23137255, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Resource" id="Resource_3idxy"]
script = ExtResource("9_32ht4")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.3
_hover_scale = 1.05
press_color = Color(0.72, 0.72, 0.72, 1)
_press_scale = 0.98
animation_scale = 19.697
animation_speed = 3.473
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_h3ok5"]
script = ExtResource("9_32ht4")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.3
_hover_scale = 1.0
press_color = Color(0.72, 0.72, 0.72, 1)
_press_scale = 1.0
animation_scale = 19.697
animation_speed = 3.473
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[node name="Node2D" type="Control" node_paths=PackedStringArray("_user_message", "_ai_message", "first_line")]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tb6sx")
_user_message = NodePath("ColorRect/ScrollContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer")
_ai_message = NodePath("ColorRect/ScrollContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer2")
typename = "ai_help"
first_line = NodePath("ColorRect/Label2")
persistent = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 8
material = ExtResource("2_o277e")
instance_shader_parameters/corner_radius_width_add = Vector2(9.365, 1)
instance_shader_parameters/outline_color = Color(0.85, 0.85, 0.85, 1)
instance_shader_parameters/tuning = Color(0.42, 0.42, 0.42, 1)
layout_mode = 0
offset_left = 342.0
offset_top = 29.0
offset_right = 826.0
offset_bottom = 489.0

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
custom_minimum_size = Vector2(433, 350)
layout_mode = 0
offset_left = 28.0
offset_top = 38.0
offset_right = 461.0
offset_bottom = 397.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/ScrollContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ScrollContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_right = -20
theme_override_constants/margin_bottom = -10

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="ColorRect/ScrollContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(133, 0)
layout_mode = 2

[node name="txt" type="RichTextLabel" parent="ColorRect/ScrollContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
focus_mode = 2
mouse_filter = 2
theme = ExtResource("5_3k8xb")
bbcode_enabled = true
text = "здравствуйте братишька  
здравствуйте"
fit_content = true
selection_enabled = true
script = ExtResource("4_3k8xb")

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/ScrollContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_direction = 3
layout_mode = 2
alignment = 2

[node name="txt" type="RichTextLabel" parent="ColorRect/ScrollContainer/MarginContainer2/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
focus_mode = 2
mouse_filter = 2
theme = ExtResource("5_3k8xb")
theme_override_styles/normal = SubResource("StyleBoxFlat_42jti")
theme_override_styles/focus = SubResource("StyleBoxFlat_42jti")
bbcode_enabled = true
text = "ОКей босс щас я тебе сделаю казахстанский чатгипити чтобы он был мощны йкрч"
fit_content = true
selection_enabled = true
script = ExtResource("4_3k8xb")

[node name="root" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="i" type="Sprite2D" parent="ColorRect/root"]
position = Vector2(23.000015, 21)
scale = Vector2(0.9496938, 0.9496938)
texture = ExtResource("3_h3ok5")

[node name="Label" type="Label" parent="ColorRect/root"]
modulate = Color(0.41, 0.41, 0.41, 1)
z_index = 1
layout_mode = 0
offset_left = 36.0
offset_top = 9.0
offset_right = 140.84766
offset_bottom = 52.0
scale = Vector2(0.600218, 0.600218)
theme = ExtResource("4_42jti")
text = "/axon"

[node name="TextureRect" type="TextureRect" parent="ColorRect/root"]
z_index = 5
layout_mode = 0
offset_left = 20.987915
offset_top = 396.0
offset_right = 41.347443
offset_bottom = 840.71155
rotation = -1.5707964
texture = SubResource("GradientTexture1D_h3ok5")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/root/TextureRect"]
layout_mode = 0
offset_left = -40.0
offset_top = -10.803192
offset_bottom = 459.54654
color = Color(0.14901961, 0.14901961, 0.14901961, 1)

[node name="TextureRect2" type="TextureRect" parent="ColorRect/root"]
z_index = 5
layout_mode = 0
offset_left = 20.987915
offset_top = 37.0
offset_right = 41.347443
offset_bottom = 481.71155
rotation = -1.5707964
scale = Vector2(-1, 1)
texture = SubResource("GradientTexture1D_h3ok5")
expand_mode = 1

[node name="Label2" type="TextEdit" parent="ColorRect" node_paths=PackedStringArray("enter_event")]
z_index = 6
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -64.44354
offset_right = 467.0
offset_bottom = -18.443542
grow_vertical = 0
focus_mode = 1
theme = ExtResource("5_3k8xb")
theme_override_fonts/font = ExtResource("6_uxxa7")
theme_override_styles/normal = SubResource("StyleBoxFlat_tb6sx")
theme_override_styles/focus = SubResource("StyleBoxFlat_o277e")
theme_override_styles/read_only = SubResource("StyleBoxFlat_tb6sx")
placeholder_text = " "
context_menu_enabled = false
deselect_on_focus_loss_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
script = ExtResource("7_o277e")
enter_event = NodePath("train")
max_length = 200
max_size_y = 512

[node name="train" parent="ColorRect/Label2" instance=ExtResource("8_q5qxb")]
instance_shader_parameters/corner_radius_width_add = Vector2(-6, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -39.556458
offset_right = -7.5753784
offset_bottom = -7.519989
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(18.21231, 16.018234)
color = Color(0.91666675, 0.5, 1, 1)
button_type = 1
top = true
hint = &"Add"
base_scale_x = 0.45
resize_after = 6
base_size = Vector2(36.42462, 32.03647)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_3idxy")
in_splash = true

[node name="TextureRect" type="TextureRect" parent="ColorRect/Label2/train"]
layout_mode = 0
offset_left = 4.382955
offset_top = 2.365299
offset_right = 44.382954
offset_bottom = 42.3653
scale = Vector2(0.6954446, 0.6954446)
texture = ExtResource("11_h3ok5")

[node name="train" parent="ColorRect" instance=ExtResource("8_q5qxb")]
z_index = 5
instance_shader_parameters/corner_radius_width_add = Vector2(-8, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 0
offset_left = 419.00006
offset_top = 11.999998
offset_right = 469.97607
offset_bottom = 32.57119
scale = Vector2(1.1770253, 1.1770253)
pivot_offset = Vector2(25.488007, 10.285596)
mouse_filter = 1
color = Color(0.59, 0.59, 0.59, 1)
button_type = 1
top = true
hint = &"login"
base_scale_x = 0.45
resize_after = 4
text = "Clear"
base_size = Vector2(50.976013, 20.571192)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_h3ok5")
in_splash = true

[node name="Node" type="Node" parent="."]
script = ExtResource("10_hh2om")

[connection signal="text_accept" from="ColorRect/Label2" to="." method="on_send"]
[connection signal="text_changed" from="ColorRect/Label2" to="." method="_on_label_2_text_changed"]
[connection signal="text_changed" from="ColorRect/Label2" to="ColorRect/Label2" method="_on_text_changed"]
[connection signal="hovering" from="ColorRect/Label2/train" to="." method="_on_train_hovering"]
[connection signal="released" from="ColorRect/train" to="." method="_on_cl_released"]
